# workspace-context-mcp

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs
test_project/src/: api.js
test_project/src/models/: user.rs
workspace-context/: Cargo.toml  INSTALL.md  build.sh  deploy.sh  extension.toml  settings.example.json  test.sh
workspace-context/src/: lib.rs
